# bilby_encoder

./: .gitignore  README.md  pyproject.toml
src/: encoder.py
testing/: genome_helper.py  test_encoder.py  testdata_generator.ipynb
testing/testdata/allexontest/: alignment0.bam  alignment0.sam  allexontest_mtrx0.txt  allexontest_mtrx1.txt  genome.fasta  reads0.fasta  sorted_alignment0.bam  sorted_alignment0.bam.bai  windows.bed  windows0.bed
testing/testdata/basictest/: alignment0.bam  alignment0.sam  genome.fasta  reads0.fasta  sorted_alignment0.bam  sorted_alignment0.bam.bai  windows.bed  windows0.bed
testing/testdata/reversetest/: alignment0.bam  alignment0.sam  alignment1.bam  alignment1.sam  alignment2.bam  alignment2.sam  alignment3.bam  alignment3.sam  genome.fasta  reads0.fasta  reads1.fasta  reads2.fasta  reads3.fasta  reversetest_mtrx0.txt  reversetest_mtrx1.txt  reversetest_mtrx2.txt  reversetest_mtrx3.txt  sorted_alignment0.bam  sorted_alignment0.bam.bai  sorted_alignment1.bam  sorted_alignment1.bam.bai  sorted_alignment2.bam  sorted_alignment2.bam.bai  sorted_alignment3.bam  sorted_alignment3.bam.bai  windows.bed  windows0.bed  windows1.bed
