# CODE: https://github.com/ianholmeslab/bilby_encoder

[project]
name = "bilby_encoder"
description = "" # TODO
requires-python = ">= 3.8"
readme = "README.md"
dynamic = ["version"]

# TODO: make dependency ranges more accurate (truly minimum supported versions)
dependencies = [
  "Bio>=1.7.1",
  "biopython>=1.84",
  "numpy>=2.1.3",
  "pandas>=2.2.3",
  "pyranges>=0.1.2",
  "pysam>=0.22.1",
  "scikit_learn>=1.5.2",
]

[project.optional-dependencies]
test = [
    "pytest==8.3.3",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]